--- a/app/templates/frontend/layout/header.html
+++ b/app/templates/frontend/layout/header.html
@@ -1,4 +1,4 @@
-<nav class="navbar navbar-expand-lg navbar-dark osahan-nav">
+<nav class="navbar navbar-expand-lg navbar osahan-nav" >
     <div class="container">
        <a class="navbar-brand" href="{{url_for('home')}}"><img alt="Mahlzeit Express" src="#"></a>
        <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavDropdown" aria-controls="navbarNavDropdown" aria-expanded="false" aria-label="Toggle navigation">
