--- a/app/templates/frontend/client_details_frontend/header.html
+++ b/app/templates/frontend/client_details_frontend/header.html
@@ -13,7 +13,7 @@
                <a class="nav-link" href="offers.html"><i class="icofont-sale-discount"></i> Angebote <span class="badge badge-danger">New</span></a>
             </li>
             <li class="nav-item dropdown">
-               <a class="nav-link" href="#" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+               <a class="nav-link" href="{{ url_for('frontend_bp.all_restaurants') }}">
                Restaurants
                </a>
                
